# media-fetcher

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css
client/src/api/: IApiClient.ts  TauriApiClient.ts  WebApiClient.ts  client.ts  types.ts
client/src/components/: AudioPreview.tsx  BatchDownload.tsx  BatchItemRow.tsx  BatchUrlInput.tsx  FilenameInput.tsx  FormatSelector.tsx  JobQueue.tsx  OutputFolder.tsx  RecentHistory.tsx  ResolutionSelector.tsx  SettingsModal.tsx  ToolStatusBanner.tsx  TrimControls.tsx  TrimSection.tsx  UrlInput.tsx  VideoInfoCard.tsx
client/src/hooks/: useBatchDownload.ts  useDarkMode.ts  useDownloadJob.ts  usePreview.ts  useSettings.ts  useToolStatus.ts  useVideoInfo.ts
client/src/providers/: AppShellProvider.tsx  DarkModeProvider.tsx  DownloadOptionsProvider.tsx  SettingsProvider.tsx  index.tsx
client/src/utils/: filename.ts  history.ts
icon-sets/macos/: AppIcon.icns
scripts/: download-binaries.sh  downloader-cleanup-regression.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: download.rs  info.rs  mod.rs  preview.rs  settings.rs  tools.rs
src-tauri/src/utils/: mod.rs  sidecar.rs  types.rs  validation.rs
src/cli/: index.ts  prompts.ts
src/core/: downloader.ts  types.ts
src/server/: index.ts
(+17 files in other folders)
